@@ -2,6 +2,7 @@ glFusion ChangeLog
 
 v1.3.0
 ------
+- Added 'author' attribute to plugin_getiteminfo_...() (Mark)
 - Fixed issue where comment styles were not properly set during preview (Mark)
 - Replaced {xhtml} tags with " /" as HTML5 validates by ignoring auto-closing
   tags (ex: <br />) (Eric)
